--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <title>Sistema Ordenes</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+    /> -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+      default-src 'self';
+      connect-src 'self' %VITE_BACK_URL%;
+      script-src 'self' 'unsafe-inline' 'unsafe-eval';
+      img-src 'self' data:;
+      style-src 'self' 'unsafe-inline';
+    "
     />
   </head>
   <body>
