--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,8 +14,8 @@
       default-src 'self';
       connect-src 'self' %VITE_BACK_URL%;
       script-src 'self' 'unsafe-inline' 'unsafe-eval';
-      img-src 'self' data:;
-      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: blob:;
+      style-src 'self' 'unsafe-inline' ;
     "
     />
   </head>
