--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,7 +14,7 @@
       default-src 'self';
       connect-src 'self' %VITE_BACK_URL%;
       script-src 'self' 'unsafe-inline' 'unsafe-eval';
-      img-src 'self' data: blob:;
+      img-src 'self' data: blob: https://res.cloudinary.com;
       style-src 'self' 'unsafe-inline' ;
     "
     />
