--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -8,7 +8,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
     /> -->
-    <meta
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="
       default-src 'self';
@@ -17,7 +17,7 @@
       img-src 'self' data: blob: https://res.cloudinary.com;
       style-src 'self' 'unsafe-inline' ;
     "
-    />
+    /> -->
   </head>
   <body>
     <div id="root"></div>
